# SuiDao

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  README.md  docker-compose.yml
backend/migrations/: 202409050001_init.sql
backend/src/: config.rs  database.rs  main.rs  models.rs  services.rs  sui_client.rs
frontend/: README.md  SUI_CONTRACT_INTEGRATION.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/components/: ConnectedAccount.tsx  FeatureCard.tsx  Header.tsx  NetworkStatus.tsx  OwnedObjects.tsx
frontend/src/app/dao/create/: page.tsx
frontend/src/app/dao/list/: page.tsx
frontend/src/app/proposals/: page.tsx
frontend/src/app/proposals/[id]/: page.tsx
frontend/src/app/proposals/list/: page.tsx
frontend/src/config/: contracts.ts
frontend/src/lib/: sui-contract.ts
programs/: Move.toml
programs/sources/: dao.move  programs.move  proposal.move
programs/tests/: dao_test.move  dao_tests.move  programs_tests.move
